--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <h1 id="welcome"> Welcome, Milli PB!</h1>
     <p>This is Milli's website</p>
     <a href="https://www.flickr.com/photos/millicentpenelope/16291939329/">This is a picture of Milli</a>
+    <img src="https://www.flickr.com/photos/millicentpenelope/16291939329/" alt="picture of milli with puppy and maria">
   </body>
 </html>
