--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     <div id="two">
     <h2 id="week-two">Week 2</h2>
       <ul>
-        <li>Enumberables</li>
+        <li>Enumerables</li>
         <li>Pairing</li>
         <li>Projects:</li>
           <ul>
             <li>Bubble Sort</li>
-            <li>Chisel: markdown parser</li>
-            <li>Linked List</li>
+            <li><a class="project" href="https://github.com/kristinabrown/chisel">Chisel: markdown parser</a></li>
+            <li><a class="project" href="https://github.com/kristinabrown/linked-list">Linked List</a></li>
           </ul>
       </ul>
       <p class="to-top"><a href=#main-header>back to top</a></p>
@@ -46,10 +46,7 @@
     <h2 id="week-three">Week 3</h2>
       <ul>
         <li>Encapsulation</li>
-        <li>Project:<li>
-          <ul>
-            <li>Mastermind</li>
-          </ul>
+        <li><a class="project" href="https://github.com/kristinabrown/mastermind">Mastermind</a></li>
       </ul>
       <p class="to-top"><a href=#main-header>back to top</a></p>
     </div>
@@ -57,7 +54,7 @@
     <div id="four-five">
     <h2 id="week-four-five">Week 4 and 5</h2>
       <ul>
-        <li>Sales Engine</li>
+        <li><a class="project" href="https://github.com/chelseaworrel/sales_engine">Sales Engine</a></li>
       </ul>
       <p class="to-top"><a href=#main-header>back to top</a></p>
     </div>
@@ -65,7 +62,7 @@
     <div id="six">
     <h2 id="week-six">Week 6</h2>
       <ul>
-        <li>Robodoku</li>
+        <li><a class="project" href="https://github.com/kristinabrown/robodoku">Robodoku</a></li>
         <li>Final Assessment</li>
         <ul>
           <li>Ruby Stynax:easily implements solutions</li>
