some more styling

--- a/index.html
+++ b/index.html
@@ -73,9 +73,8 @@
           <li>Collaboration: thinks before coding and integrates feedback</li>
         </ul>  
       </ul>
-      <p class="to-top"><a href=#main-header>back to top</a></p>
     </div>
-    <iframe id="milli-slides" src="https://www.flickr.com/photos/millicentpenelope/16545700550/in/photostream/player/" width=250px frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+    <iframe id="milli-slides" src="https://www.flickr.com/photos/millicentpenelope/16545700550/in/photostream/player/" width=250px height=450px frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
     
   </body>
 </html>
